Updated: index.html, general.css, and utility.css
In this commit:
- Updated index.html: To rename certain classes, add the bars to the top of each feature item, add classes to utilize utility classes, and to link the stylesheets.
- Updated general.css: To update the default font color to grayish blue, and to add a default letter spacing.
- Updated utility.css: To include more utility classes.

--- a/stylesheets/utility.css
+++ b/stylesheets/utility.css
@@ -10,3 +10,19 @@
 .bold {
   font-weight: var(--bold);
 }
+
+.bg-cyan {
+  background-color: var(--cyan);
+}
+
+.bg-red {
+  background-color: var(--red);
+}
+
+.bg-orange {
+  background-color: var(--orange);
+}
+
+.bg-blue {
+  background-color: var(--blue);
+}
