--- a/stylesheets/general.css
+++ b/stylesheets/general.css
@@ -19,6 +19,7 @@
 }
 
 *, *::before, *::after {
+  letter-spacing: 0;
   box-sizing: border-box;
   margin: 0;
   padding: 0;
@@ -32,6 +33,7 @@ body {
   font-family: "Poppins", Arial, Helvetica, sans-serif;
   font-size: 1rem;
   font-weight: var(--normal-bold);
+  color: var(--grayish-blue);
   background-color: var(--very-light-gray);
 }
 
