--- a/stylesheets/four-card-component.css
+++ b/stylesheets/four-card-component.css
@@ -1,51 +1,50 @@
 .four-card-feature-component {
   text-align: center;
   min-height: 100vh;
-  width: clamp(300px, 82.6666667%, 100%);
-  padding: 82.5px 0 0 0;
+  width: clamp(20rem, 82.6666667%, 100%);
+  padding: 5.5rem 0 0 0;
 }
 
 .section-title {
-  font-size: 24px;
+  font-size: 1.6rem;
   line-height: 1.55;
-  letter-spacing: 0.15px;
+  letter-spacing: 0.01rem;
   color: var(--very-dark-blue);
-  margin-bottom: 15px;
+  margin-bottom: 1rem;
 }
 
 .section-title > .bold {
-  letter-spacing: 0.2px;
+  letter-spacing: 0.0133333333333333rem;
 }
 
 .section-description {
   line-height: 1.68;
-  margin-bottom: 74px;
+  margin-bottom: 4.933333333333333rem;
 }
 
 .feature-list {
   display: grid;
-  grid-template-columns: 1fr;
   text-align: left;
   list-style-type: none;
 }
 
 .feature-item {
   position: relative;
-  height: 222px;
-  padding: 30px 28px 28px 28px;
+  height: 14.8rem;
+  padding: 2rem 1.866666666666667rem 1.866666666666667rem 1.866666666666667rem;
   background-color: white;
-  margin-bottom: 25px;
-  border-radius: 8px;
+  margin-bottom: 1.666666666666667rem;
+  border-radius: 0.5333333333333333rem;
   overflow: hidden;
-  box-shadow: 0 16px 16px hsla(180, 62%, 55%, 0.5);
+  box-shadow: 0 1.066666666666667rem 1.066666666666667rem hsla(180, 62%, 55%, 0.5);
 }
 
 .feature-list > li:nth-child(2) .feature-item {
-  margin-bottom: 23px;
+  margin-bottom: 1.533333333333333rem;
 }
 
 .feature-list > li:nth-child(3) .feature-item {
-  margin-bottom: 24px;
+  margin-bottom: 1.6rem;
 }
 
 .feature-item > * {
@@ -54,20 +53,20 @@
 
 .feature-item-icon {
   position: absolute;
-  height: 57px;
-  width: 57px;
-  right: 28px;
-  bottom: 28px;
+  height: 3.8rem;
+  width: 3.8rem;
+  right: 1.866666666666667rem;
+  bottom: 1.866666666666667rem;
 }
 
 .feature-item-header {
-  font-size: 20px;
+  font-size: 1.333333333333333rem;
   color: var(--very-dark-blue);
-  margin-bottom: 7px;
+  margin-bottom: 0.4666666666666667rem;
 }
 
 .feature-item-description {
-  font-size: 13px;
+  font-size: 0.8666666666666667rem;
   line-height: 1.725;
 }
 
@@ -76,52 +75,51 @@
   top: 0;
   left: 0;
   right: 0;
-  height: 4px;
+  height: 0.2666666666666667rem;
 }
 
-@media (min-width: 750px) {
+@media (min-width: 1360px) {
   .four-card-feature-component {
-    padding: 80px 0 0 0;
+    padding: 5.333333333333333rem 0 0 0;
   }
 
   .section-title,
   .section-description {
-    max-width: 550px;
+    max-width: 36.66666666666667rem;
     margin: 0 auto;
   }
 
   .section-title {
-    font-size: 36px;
-    letter-spacing: 0.1575px;
+    font-size: 2.4rem;
+    letter-spacing: 0.0105rem;
     line-height: 1.425;
-    margin-bottom: 16px;
+    margin-bottom: 1.066666666666667rem;
   }
 
   .section-description {
-    letter-spacing: 0.06px;
-    margin-bottom: 63px;
+    letter-spacing: 0.004rem;
+    margin-bottom: 4.2rem;
   }
 
   .feature-list {
-    grid-template-columns: 1fr 1fr 1fr;
-    grid-template-rows: 1fr 1fr;
-    column-gap: 30px;
-    row-gap: 30px;
+    grid-template-columns: repeat(3, 1fr);
+    column-gap: 2rem;
+    row-gap: 2rem;
     align-items: center;
-    max-width: 1110px;
-    height: 530px;
-    margin: 0 auto;
+    max-width: 74rem;
+    max-height: 35.33333333333333rem;
+    margin: 0 auto 2rem auto;
   }
 
   .feature-list > li:first-child,
   .feature-list > li:last-child {
-    padding-top: 24px;
+    padding-top: 1.6rem;
   }
 
   .feature-item {
-    width: 350px;
-    height: 250px;
-    padding: 34px 32px 32px 32px;
+    width: 23.33333333333333rem;
+    height: 16.66666666666667rem;
+    padding: 2.266666666666667rem 2.133333333333333rem 2.133333333333333rem 2.133333333333333rem;
   }
 
   .feature-list > li:nth-child(2) .feature-item,
@@ -130,21 +128,21 @@
   }
 
   .feature-item-header {
-    margin-bottom: 12px;
+    margin-bottom: 0.8rem;
   }
 
   .feature-item-description {
-    letter-spacing: 0.1px;
+    letter-spacing: 0.0066666666666667rem;
   }
 
   .feature-item-icon {
-    right: 32px;
-    bottom: 32px;
+    right: 2.133333333333333rem;
+    bottom: 2.133333333333333rem;
   }
 
   .feature-list > li:first-of-type,
   .feature-list > li:last-of-type  {
-    grid-row: 1 / 3;
+    grid-row: 1 / span 2;
   }
 
   .feature-list > li:last-of-type {
